# swc-plugin-react-data-testid

./: .all-contributorsrc  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  package.json  readme.md
swc-plugin-react-data-testid/: .gitignore  Cargo.toml  README.md  package.json
swc-plugin-react-data-testid/.cargo/: config.toml
swc-plugin-react-data-testid/scripts/: release.sh
swc-plugin-react-data-testid/src/: lib.rs
swc-plugin-react-data-testid/tests/: fixture.rs
swc-plugin-react-data-testid/tests/fixture-filename/anonymous-fn-export/: filename.txt  input.tsx
swc-plugin-react-data-testid/tests/fixture-multi-attrs/multi-framework-attrs/: output.tsx
swc-plugin-react-data-testid/tests/fixture-options/empty-attributes-array/: input.tsx
swc-plugin-react-data-testid/tests/fixture-options/multiple-attributes/: output.tsx
swc-plugin-react-data-testid/tests/fixture-options/with-data-cy/: input.tsx
swc-plugin-react-data-testid/tests/fixture-playwright/playwright-test-id/: output.tsx
swc-plugin-react-data-testid/tests/fixture/anonymous-fn-no-parent/: input.tsx  output.tsx
swc-plugin-react-data-testid/tests/fixture/array-opening-element/: input.tsx
swc-plugin-react-data-testid/tests/fixture/class-without-name/: input.tsx
swc-plugin-react-data-testid/tests/fixture/complex-destructured-edge/: input.tsx
swc-plugin-react-data-testid/tests/fixture/empty-attrs-config/: output.tsx
swc-plugin-react-data-testid/tests/fixture/existing-attrs-no-override/: output.tsx
swc-plugin-react-data-testid/tests/fixture/fn-expression-no-id/: input.tsx  (+1 more)
(+137 files in other folders)
