[package]
name = "swc_plugin_react_data_testid"
version = "0.1.0"
edition = "2021"
description = "SWC plugin to automatically generate data-testid attributes for React components"
license = "MIT"
repository = "https://github.com/Kazaz-Or/swc-plugin-react-data-testid"

[lib]
# rlib enables cargo test to link the library natively; cdylib is the WASM plugin output.
crate-type = ["cdylib", "rlib"]

# ⚠️  VERSION PINNING: swc_core version must match the SWC version used by the
# consumer (Next.js, @vitejs/plugin-react-swc, @swc/jest, etc.).
# Current pins target Next.js 16.2.6 / @swc/core 1.10.18 (swc_ecma_ast 20.0.1).
# Check compatibility at https://plugins.swc.rs/ before publishing.
# Each SWC minor release may require a new plugin build and npm release.
[dependencies]
swc_core = { version = "65", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "=20.0.1"
swc_plugin_proxy = "=20.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
swc_core = { version = "65", features = [
    "swc_ecma_transforms_testing",
    "ecma_parser",
    "testing",
] }

[profile.release]
opt-level = 3
lto = true
